# Quantization

./: .gitignore  CLEANUP_README.md  CONTRIBUTING.md  LICENSE  PROJECT_MANAGEMENT.md  README.MD  TESTING_README.md  benchmark_model.py  benchmark_results.json  cleanup_simple.ps1  cleanup_workspace_fixed.ps1  compare_models.py  convert_to_fp16.py  deepseek_onnx_helper.py  diagnose_onnx_model.py  direct_interactive_test.py  direct_onnx_inference.py  enhanced_compare_models.py  enhanced_cpu_only_test.py  enhanced_onnx_inference.py  environment_check.py  generate_report.py  interactive_test.py  maintain.bat  model_report.html  organize_notebooks.ps1  organize_notebooks_simple.ps1  pyproject.toml  quant1.ipynb  quant2.ipynb  qwen2_onnx_export.py  reexport_with_position_ids.py  requirements.txt  run_inference_tests.ps1  run_master_test.ps1  run_quantization.py  sample_prompts.txt  test_quantized_model.py  troubleshoot_onnx_model.py  validate_organization.py
comparison_results_enhanced/: accuracy_comparison.csv  enhanced_comparison_report.txt  enhanced_results.json
notebooks/: README.md
