[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-quantization-finetuning"
version = "0.1.0"
description = "Project for quantizing and fine-tuning DeepSeek models."
readme = "README.MD"
requires-python = ">=3.8, <3.12"
license = {text = "MIT"} # Or choose another license
authors = [
  {name = "Your Name", email = "your.email@example.com"}, # Update with your details
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License", # Update if you chose a different license
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["llm", "deepseek", "quantization", "qlora", "finetuning", "nlp", "ai"]

dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "transformers==4.38.2", # Pinned for stability as noted in fine-tuning notebook
    "datasets",
    "peft",
    "accelerate",
    "bitsandbytes>=0.41.0",  # For 4-bit quantization
    "trl",
    "sentencepiece",
    "scipy",
    "jupyterlab", # For running notebooks
    "ipykernel",  # For Jupyter kernel
    "optimum>=1.14.0",  # For ONNX quantization
    "onnx>=1.14.0",  # ONNX format support
    "onnxruntime>=1.16.0",  # ONNX runtime for CPU/GPU inference
    "numpy>=1.24.0",
    "tqdm",  # For progress bars
    "colorama",  # For colored terminal output
]

[project.urls]
Homepage = "https://github.com/yourusername/yourprojectname" # Update with your project URL
Repository = "https://github.com/yourusername/yourprojectname" # Update with your project URL

# Optional: For development dependencies, if you want to separate them
# [project.optional-dependencies]
# dev = [
#     "pytest",
#     "ruff",
# ]

# If you plan to use uv for project management, you might not need extensive tool-specific configurations here,
# as uv will handle environment and package management based on this file.
